Diverging Stacked Bar Chart

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,6 +1714,65 @@
     "    analysis = pd.read_sql_query(sql, con, params={'cid':1}, parse_dates=['date_issued'])\n",
     "    \n",
     "analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.0732236, 0.05045047, 0.14597263),\n",
+       " (0.14066867, 0.0778224, 0.19452676),\n",
+       " (0.20973515, 0.09747934, 0.24238489),\n",
+       " (0.28144375, 0.11104133, 0.2835489),\n",
+       " (0.355676, 0.11910909, 0.31620996),\n",
+       " (0.43860848, 0.12177004, 0.34119475),\n",
+       " (0.51728314, 0.1179558, 0.35453252),\n",
+       " (0.59770215, 0.10693774, 0.35838029),\n",
+       " (0.67824099, 0.09192342, 0.3504148),\n",
+       " (0.75535825, 0.08919792, 0.32876184),\n",
+       " (0.82852822, 0.13014118, 0.29347474),\n",
+       " (0.8833417, 0.19830556, 0.26014181),\n",
+       " (0.92223947, 0.28287251, 0.24229568),\n",
+       " (0.94291042, 0.37549479, 0.26369821),\n",
+       " (0.95381595, 0.46373781, 0.31769923),\n",
+       " (0.96042097, 0.55328624, 0.39319057),\n",
+       " (0.96355923, 0.63201624, 0.47204746),\n",
+       " (0.96516917, 0.70776351, 0.5606593),\n",
+       " (0.96773482, 0.78044149, 0.65912731),\n",
+       " (0.97327085, 0.85072354, 0.76299805)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(sns.color_palette('rocket', 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ff'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex(int(1* 255))[2:]"
    ]
   },
   {
